--- a/jiaren.html
+++ b/jiaren.html
@@ -250,7 +250,7 @@
 			</div>
 		</div>
 		<!-- AUDIO -->
-		<audio src="http://isure.stream.qqmusic.qq.com/C400003YC3p31HyR96.m4a?guid=7650201131&vkey=9F21BAE0D0DA6A79E1507E29D192DD348C32EE6C97DABC07CC5DD625AA3D767D852B54311BE302ADDEB369838EC9798A42AD59D187CC237A&uin=723&fromtag=66" autoplay=
+		<audio src="http://m10.music.126.net/20190526184133/fcf4c07888efddd4b1121830e38e33ca/ymusic/0758/550f/545f/028d3b9421be8425d60dc57735cf6ebc.mp3" autoplay=
 		"" loop="" class="AUDIO"></audio>
 		<a href="javascript:;" class="MUSICBTN MOVE"></a>
 		<!-- ARROW -->
